namespace PopUpOslo.Domain.Enums;

public enum BookingStatus
{
    Booked,
    Cancelled,
    Completed
}