namespace PopUpOslo.Domain.Enums;

public enum EventCategory
{
    Food,
    Networking,
    Education,
    Culture,
    Other
}