namespace PopUpOslo.Domain.Enums;

public enum EventType
{
    Workshop,
    Dining
}