namespace PopUpOslo.Domain.Enums;

public enum UserRole
{
    User = 0,
    Organizer = 1,
    Admin = 2
}