@startuml
title PopUpOslo - Class Diagram (Clean Architecture)

skinparam classAttributeIconSize 0

' =========================
' ENUMS
' =========================
enum UserRole {
  Admin
  Organizer
  User
}

enum EventCategory {
  Food
  Networking
  Education
  Culture
  Other
}

enum EventType {
  Workshop
  Dining
}

enum EventStatus {
  Upcoming
  Cancelled
  Completed
}

enum BookingStatus {
  Booked
  Cancelled
  Completed
}

' =========================
' DOMAIN ENTITIES
' =========================

class User {
  +UserId: int
  +Username: string
  -PasswordHash: string
  +Role: UserRole
}

abstract class Event <<abstract>> {
  +EventId: int
  +Title: string
  +Description: string
  +DateTime: DateTime
  +Venue: string
  +OrganizerId: int
  +Category: EventCategory
  +Type: EventType
  +Status: EventStatus
}

class DiningEvent
class WorkshopEvent

class Booking {
  +BookingId: int
  +UserId: int
  +EventId: int
  +OptionId: int
  +Status: BookingStatus
}

class BookingOption {
  +OptionId: int
  +EventId: int
  +Name: string
  +Price: decimal
  +Capacity: int
  +RemainingCapacity: int
}

class Review {
  +ReviewId: int
  +UserId: int
  +EventId: int
  +Rating: int
  +Comment: string
}

' =========================
' INHERITANCE
' =========================
Event <|-- DiningEvent
Event <|-- WorkshopEvent

' =========================
' SERVICES
' =========================

class AuthService {
  +Register(): bool
  +Login(): User
}

class EventService {
  +CreateEvent(): int
  +GetAllEvents(): List
  +GetEventById(): Event
  +UpdateEvent(): void
  +CancelEvent(): void
}

class BookingService {
  +CreateBooking(): bool
}

class BookingOptionService {
  +GetOptionsByEvent(): List
  +CreateDefaultOption(): void
}

class ReviewService {
  +AddReview(): void
}

class SearchService {
  +SearchEvents(): List
}

' =========================
' REPOSITORIES
' =========================

abstract class BaseRepository <<abstract>> {
  #GetOpenConnection(): SqliteConnection
}

class UserRepository {
  +AddUser(): void
  +GetUserByUsername(): User
}

class EventRepository {
  +AddEvent(): int
  +GetAllEvents(): List
  +GetEventById(): Event
  +UpdateEvent(): void
  +CancelEvent(): void
}

class BookingRepository {
  +CreateBooking(): void
}

class BookingOptionRepository {
  +GetByEvent(): List
  +Create(): void
}

class ReviewRepository {
  +AddReview(): void
}

' =========================
' RELATIONSHIPS
' =========================

User "1" --> "*" Booking
User "1" --> "*" Review

Event "1" --> "*" Booking
Event "1" --> "*" Review
Event "1" --> "*" BookingOption

Booking --> BookingOption

' enum connections
User --> UserRole
Event --> EventCategory
Event --> EventType
Event --> EventStatus
Booking --> BookingStatus

' services → repositories
AuthService --> UserRepository
EventService --> EventRepository
BookingService --> BookingRepository
BookingService --> BookingOptionRepository
BookingOptionService --> BookingOptionRepository
ReviewService --> ReviewRepository
SearchService --> EventRepository

' repository inheritance
UserRepository --|> BaseRepository
EventRepository --|> BaseRepository
BookingRepository --|> BaseRepository
BookingOptionRepository --|> BaseRepository
ReviewRepository --|> BaseRepository

@enduml 